--- a/Source Code/C#/CardProcessingApi/CardProcessingApi.Data/CardProcessing.tt
+++ b/Source Code/C#/CardProcessingApi/CardProcessingApi.Data/CardProcessing.tt
@@ -319,7 +319,7 @@ public class CodeStringGenerator
             Accessibility.ForType(entity),
             _code.SpaceAfter(_code.AbstractOption(entity)),
             _code.Escape(entity),
-            _code.StringBefore(" : ", _typeMapper.GetTypeName(entity.BaseType)));
+            _code.StringBefore(" : ", _typeMapper.GetTypeName(entity.BaseType) ?? "BaseEntity"));
     }
     
     public string EnumOpening(SimpleType enumType)
