--- a/Source Code/Java/WC-MCAG/WC-MCAG/Views/Shared/_Layout.cshtml
+++ b/Source Code/Java/WC-MCAG/WC-MCAG/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
         <a href="#" class="visible-phone"><i class="icon icon-home"></i> Dashboard</a>
         <ul id="menu">
             <li><a href="/Home/Home"><i class="icon icon-home"></i> <span>Trang chủ</span></a> </li>
-            <li class="active"><a href="/User/ViewListUser"><i class="icon icon-signal"></i> <span>Xem danh sách Merchant</span></a> </li>
+            <li class="active"><a href="/Agent/ViewMerchantManaged"><i class="icon icon-signal"></i> <span>Xem danh sách Merchant</span></a> </li>
             <li class="active"><a href="/Agent/Agent"><i class="icon icon-inbox"></i> <span>Xem thông tin Agent</span></a> </li>
             <li> <a href="charts.html"><i class="icon icon-signal"></i> <span>Charts &amp; graphs</span></a> </li>
             <li> <a href="widgets.html"><i class="icon icon-inbox"></i> <span>Widgets</span></a> </li>
