cap nhat - client chuc nang doi mat khau (merchant)

--- a/Source Code/Java/WC-MCAG/WC-MCAG/Views/Agent/Agent.cshtml
+++ b/Source Code/Java/WC-MCAG/WC-MCAG/Views/Agent/Agent.cshtml
@@ -180,7 +180,7 @@
         //});
 
         var data = {
-            "userid": 10
+            "userid": sessionStorage.userid
         }
 
         $.ajax({
