Done - chức năng nhận thông báo + gửi thông báo + phản hồi

--- a/Source Code/Java/WC-MCAG/WC-MCAG/Views/Agent/Agent.cshtml
+++ b/Source Code/Java/WC-MCAG/WC-MCAG/Views/Agent/Agent.cshtml
@@ -39,24 +39,23 @@
                                 <tbody>
                                     <tr>
                                     <tr>
-                                        <td class="width30">Invoice ID:</td>
-                                        <td class="width70"><strong>TD-6546</strong></td>
+                                        <td class="width50">Công ty:       </td>
+                                        <td class="width50"><strong>Trách nhiệm Hữu hạn Một thành viên (TNHH MTV) Quản lý nợ và khai thác tài sản Agribank (AMC)</strong></td>
                                     </tr>
                                     <tr>
-                                        <td>Issue Date:</td>
-                                        <td><strong>March 23, 2013</strong></td>
+                                        <td>Thành lập:</td>
+                                        <td><strong>05/06/2017</strong></td>
                                     </tr>
                                     <tr>
-                                        <td>Due Date:</td>
-                                        <td><strong>April 01, 2013</strong></td>
+                                        <td>Đáo hạn:</td>
+                                        <td><strong>--/--/----</strong></td>
                                     </tr>
-                                <td class="width30">Client Address:</td>
+                                <td class="width30">Địa chỉ:</td>
                                 <td class="width70">
-                                    <strong>Cliente Company name.</strong> <br>
-                                    501 Mafia Street., washington, <br>
-                                    NYNC 3654 <br>
-                                    Contact No: 123 456-7890 <br>
-                                    Email: youremail@companyname.com
+                                    <strong>Agribank (AMC)</strong> <br>
+                                    29 Nguyễn Trường Tộ, 12 ,Quận 4, Hồ Chí Minh<br>
+                                    Liên hệ : 123 456-7890 <br>
+                                    Email: MTVCompany@companyname.com
                                 </td>
                                 </tr>
                                 </tbody>
