--- a/Source Code/Java/WC-MCAG/WC-MCAG/Views/User/Login.cshtml
+++ b/Source Code/Java/WC-MCAG/WC-MCAG/Views/User/Login.cshtml
@@ -73,7 +73,7 @@
                 data: JSON.stringify(data),
                 url: "http://localhost:8080/RFJVService/rest/user/checklogin"
             }).done(function (response) {
-
+                console.log(response);
                 if (response.token === "") {
                     alert("Sai tên mật khẩu hoặc password ! Vui lòng kiểm tra lại.");
                 }
@@ -81,6 +81,8 @@
                     sessionStorage.token_value = response.token;
                     sessionStorage.userid = response.userid;
                     sessionStorage.roleid = response.roleid;
+                    sessionStorage.cpnid = response.cpn;
+
                     window.location.href = "/Home/Home";
                 }
 
