--- a/Source Code/Java/WC-MCAG/WC-MCAG/Views/Shared/_Layout.cshtml
+++ b/Source Code/Java/WC-MCAG/WC-MCAG/Views/Shared/_Layout.cshtml
@@ -13,7 +13,10 @@
     <link href="~/Asset/font-awesome/css/font-awesome.css" rel="stylesheet" />
     <link rel="stylesheet" href="~/Asset/css/jquery.gritter.css" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,800' rel='stylesheet' type='text/css'>
-   
+    <link rel="stylesheet" href="~/Asset/css/bootstrap-wysihtml5.css" />
+    <!-- thư viện mới -->
+    <link rel="stylesheet" href="~/Asset/css/select2.css" />
+
     <style>
         ul li:nth-child(n+6) {
             display: none;
@@ -49,7 +52,7 @@
             <li class="dropdown" id="menu-messages">
                 <a href="#" data-toggle="dropdown" data-target="#menu-messages" class="dropdown-toggle"><i class="icon icon-envelope"></i> <span class="text">Messages</span> <span class="label label-important">5</span> <b class="caret"></b></a>
                 <ul class="dropdown-menu">
-                    <li><a class="sAdd" title="" href="#"><i class="icon-plus"></i> new message</a></li>
+                    <li><a class="sAdd" title="" href="/Notification/New_Notification"><i class="icon-plus"></i> new message</a></li>
                     <li class="divider"></li>
                     <li><a class="sInbox" title="" href="/Notification/Inbox"><i class="icon-envelope"></i> inbox</a></li> 
                     <li class="divider"></li>
