--- a/Source Code/Java/WC-MCAG/WC-MCAG/Views/User/ChangePassword.cshtml
+++ b/Source Code/Java/WC-MCAG/WC-MCAG/Views/User/ChangePassword.cshtml
@@ -60,6 +60,18 @@
                         <div id="status"></div>
                     </div>
                     <div id="submitted"></div>
+
+                    <div id="myAlert" class="modal hide">
+                        <div class="modal-header">
+                            <button data-dismiss="modal" class="close" type="button">×</button>
+                            <h2><i class="icon-chevron-down"> </i>Thành công</h2>
+                        </div>
+                        <div class="modal-body">
+                            <p>Thay đổi mật khẩu thành công</p>
+                        </div>
+                        <div class="modal-footer"> <a data-dismiss="modal" class="btn btn-primary" href="#">Xác nhận</a> </div>
+                    </div>
+
                 </form>
             </div>
         </div>
@@ -99,7 +111,7 @@
                     //console.log(xhr);
                     var status = xhr.status;                //200
                     if (status == 200) {
-                        alert("Thay đổi mật khẩu thành công"); //
+                        $('#myAlert').modal('show');
                         //window.location.href = "/Home/Home";
                         //location.assign("/Home/Home"); tat cai nay thi no xuat cai nay, ma de cai nay thi nolai xuat cai nay mac du no van chay dung srivce
                     } else {
@@ -120,12 +132,12 @@
                     //}
 
                 }).fail(function (xhr, status, error) {
-                    alert("Mật khẩu cũ không chính xác");// tui nghi no xet fail khong phai post fail ma bi fail cai nay
+                    // tui nghi no xet fail khong phai post fail ma bi fail cai nay
                     console.log(xhr);
                     console.log(status);
                     console.log(error);
-                    nsole.log(2);
                 });
+                $('#myAlert').modal('show');
         }
 
         //function change() {
